进行了过滤器的优化，初始化页面的优化

--- a/coach_info/web/WEB-INF/web.xml
+++ b/coach_info/web/WEB-INF/web.xml
@@ -3,4 +3,34 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
+    <filter>
+        <filter-name>static_jsp</filter-name>
+        <filter-class>com.neosoft.filter.CarInfoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>static_jsp</filter-name>
+        <url-pattern>/carType</url-pattern>
+        <url-pattern>/carType.jsp</url-pattern>
+        <url-pattern>/carStartTab</url-pattern>
+        <url-pattern>/carStartTab.jsp</url-pattern>
+        <url-pattern>/carTicketInfo</url-pattern>
+        <url-pattern>/carTicketInfo.jsp</url-pattern>
+        <url-pattern>/carTicketTab</url-pattern>
+        <url-pattern>/carTicketTab.jsp</url-pattern>
+        <url-pattern>/sellTicketInfo</url-pattern>
+        <url-pattern>/sellTicketInfo.jsp</url-pattern>
+        <url-pattern>/index.jsp</url-pattern>
+    </filter-mapping>
+
+    <servlet>
+        <servlet-name>login</servlet-name>
+        <servlet-class>com.neosoft.controller.LoginController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>login</servlet-name>
+        <url-pattern></url-pattern>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
 </web-app>
