开启了记录浏览量

--- a/coach_info/web/WEB-INF/web.xml
+++ b/coach_info/web/WEB-INF/web.xml
@@ -32,5 +32,7 @@
         <url-pattern></url-pattern>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
-
+    <listener>
+        <listener-class>com.neosoft.listener.CountPeopleListener</listener-class>
+    </listener>
 </web-app>
